<resources>
    <string name="app_name">FlightTicketBooking</string>
    <string name="username">Username</string>
    <string name="password">Password*</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail*</string>
    <string name="password_again">Password Again*</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>
    <string name="firstname">First name*</string>
    <string name="lastname">Last name*</string>
    <string name="search_flights">Search flights</string>
    <string name="choose_location">Choose Location...*</string>
    <string name="one_way">One Way</string>
    <string name="retour">Retour</string>
    <string name="select_date">Select date</string>
    <string name="search">Search</string>
    <string name="return_date">Return date</string>
    <string name="depart_date">Depart date</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="profile">Profile</string>
    <string name="reserve">Reserve</string>
    <string name="email_raw">Email</string>
    <string name="first_name_raw">First name</string>
    <string name="last_name_raw">Last name</string>
    <string name="modify_button">Modify details</string>
    <string name="details">Details</string>
    <string name="flight_details">Flight details</string>
    <string name="first_name_raw_big">FIRST NAME</string>
    <string name="last_name_raw_big">LAST NAME</string>
    <string name="passenger">Passenger</string>
    <string name="departure">Departure</string>
    <string name="price">Price</string>
    <string name="bookings">Bookings</string>
    <string name="revoke">Revoke</string>
    <string name="there_is_no_flight_on_this_date">There is no flight on this date</string>
    <string name="you_didn_t_reserve_flight_yet">You didn\'t reserve flight yet</string>
</resources>