<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@drawable/selector"

        app:itemIconSize="@dimen/menu_items_size"
        app:itemIconTint="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="@dimen/titleBarHeight"
        android:background="@color/primary_color"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="@dimen/titles_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="250dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/details"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/titles_font_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="42dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email_raw" />

                <TextView
                    android:id="@+id/profileEmailTV"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="@dimen/input_string_size"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/first_name_raw" />

                <EditText
                    android:id="@+id/profileFirstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/editbox_background"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/last_name_raw" />

                <EditText
                    android:id="@+id/profileLastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/editbox_background"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/modifyProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/modify_button"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/deleteAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Delete Account"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyProfileBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>